--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'ch.cmbntr:eventbus:0.9.0'
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
 
 }
