--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,11 @@
 
         </activity>
 
+        <activity android:name=".PensionActivity">
+
+        </activity>
+
+
         <activity android:name=".AgregarMaterialActivity"
             android:parentActivityName=".MaterialCampañaActivity"
             >
